test/cases/function-type-checks/test.ghul
namespace Test is
    use System;

    class Main is
        init() is
            let f_iii: (int, int) -> int = (i: int, j: int) -> int => i + j;
            let f_cc: (char) -> char = (c: char) -> char => c;
            let f_oo: (Object) -> Object = (o: Object) -> Object => o;

            let g_iii: FUNCTION_2[int, int, int] = f_iii;
            let g_cc: FUNCTION_1[char, char] = f_cc;

            let i: int = f_iii(123, 456);
            let j: int = g_iii(456, 123);
            let o: Object = f_oo("test");

            f_oo(123); // OK: 123 is assignable to Object
            f_oo(f_oo); // OK: f_oo is assignable to Object

            f_cc(123); // error: 123 is not assignable to char
            g_cc("hello"); // error: "hello" is not assignable to char

            f_iii("hello", 123);
            f_iii(123, "hello");

            f_oo("too", "many", "arguments");
            f_oo(); // error: not enough arguments

            f_iii = g_iii; // function type and equivalent FUNCTION_N[...] are interchangeable
            f_cc = g_cc;

            g_iii = f_iii;
            g_cc = f_cc;

            f_iii = f_cc;
            g_iii = g_cc;

            "hello"(1234);
        si
    si
si